Fix background resize on mobile

--- a/src/Components/Home/Home.module.css
+++ b/src/Components/Home/Home.module.css
@@ -2,8 +2,8 @@
     position: fixed;
     line-height: .5em;
     z-index: 1;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     bottom:0px;
     right: 0px;
     left: 0px;
